--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
   "accept-official-minecraft-server-eula": true,
-  "minecraft-server-version": "1.18.11.01",
+  "minecraft-server-version": "1.19.31.01",
   "server-properties": {
     "server-name": "Dedicated Node Server",
     "gamemode": "survival",
-    "difficulty": "normal",
+    "difficulty": "hard",
     "allow-cheats": false,
     "max-players": 10,
     "online-mode": true,
